--- a/config/scaffolding/Kvv_1902_FedTestProject.yml
+++ b/config/scaffolding/Kvv_1902_FedTestProject.yml
@@ -7,24 +7,82 @@ packages:
   gitUrl: https://github.com/Karthik-V-IBM-10
   gitUsername: Karthik-V-IBM-10
   gitBranch: main
+- name: WmJDBCAdapter
+  wpmServer: https://packages.webmethods.io
+  wpmRegistry: licensed
+services:
+- serviceName: project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections:MSSQL
+  packages:
+  - name: Kvv_1902_FedTestProject
+    version: "1.0"
+  - name: WmJDBCAdapter
+    version: 10.3.0.0.34
+    wpmServer: https://packages.webmethods.io
+    wpmRegistry: licensed
 configurationVariables:
   jdbc.Embedded-Database-Pool.waitingThread: "0"
-  jdbcfunc.ISDashboardStats.failFastMode: false
-  jdbc.Embedded-Database-Pool.spyenabled: "false"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionManagerSettings.maximumPoolSize
+  : "10"
   jdbcfunc.Xref.failFastMode: true
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionManagerSettings.startupBackoffSecs
+  : "10"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.user
+  : sa
   jdbcfunc.ISDashboardStats.connPoolAlias: Embedded-Database-Pool
   jdbcfunc.Xref.connPoolAlias: Embedded-Database-Pool
   jdbc.Embedded-Database-Pool.userid: APP
   jdbcfunc.ISInternal.connPoolAlias: Embedded-Database-Pool
   jdbc.Embedded-Database-Pool.password: "{AES}Zcw2EXTJgNDVmVzJO2Y3Bw=="
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionEnabled
+  : "false"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionManagerSettings.poolIncrementSize
+  : "1"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.serverName
+  : 9.60.195.99
   jdbc.Embedded-Database-Pool.snoopenabled: "false"
   jdbc.Embedded-Database-Pool.snoopparms: ddtdbg.ProtocolTraceEnable=true;ddtdbg.ProtocolTraceMaxline=16;ddtdbg.ProtocolTraceLocation=logs/snoop/Embedded-Database-Pool.log;ddtdbg.ProtocolTraceShowTime=true
   jdbcfunc.ISInternal.failFastMode: true
   jdbc.Embedded-Database-Pool.maxConns: "10"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionManagerSettings.minimumPoolSize
+  : "1"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.keyStore
+  : ""
   jdbc.Embedded-Database-Pool.expireTime: "60000"
-  jdbc.Embedded-Database-Pool.poolThreshold: "0"
   jdbc.Embedded-Database-Pool.useSSL: "false"
   jdbc.Embedded-Database-Pool.minConns: "0"
   jdbc.Embedded-Database-Pool.driverAlias: Embedded Database Driver
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionManagerSettings.startupRetryCount
+  : "0"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.trustStore
+  : ""
   jdbc.Embedded-Database-Pool.spyparms: SpyAttributes=(log=(file)logs/spy/Embedded-Database-Pool.log;logTName=yes;timestamp=yes)
   jdbc.Embedded-Database-Pool.dbURL: jdbc:derby:embedded;create=true
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.otherProperties
+  : loginTimeout=60;driverType=thin;
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionManagerSettings.heartBeatInterval
+  : "0"
+  jdbcfunc.ISDashboardStats.failFastMode: false
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionManagerSettings.poolable
+  : "false"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionManagerSettings.blockingTimeout
+  : "1000"
+  jdbc.Embedded-Database-Pool.spyenabled: "false"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.dbType
+  : MSSQL
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.password
+  : "{AES}X4QCAWgjWkTdMQvFA5XaqGmK1wuN3U1rA1B0VhuZoUw="
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.portNumber
+  : "1433"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.databaseName
+  : SIQACloud
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.datasourceClass
+  : com.wm.dd.jdbcx.sqlserver.SQLServerDataSource
+  jdbc.Embedded-Database-Pool.poolThreshold: "0"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.networkProtocol
+  : tcp
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.transactionType
+  : NO_TRANSACTION
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionManagerSettings.expireTimeout
+  : "1000"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.driverType
+  : Progress® DataDirect®
