--- a/config/scaffolding/Kvv_1902_FedTestProject.yml
+++ b/config/scaffolding/Kvv_1902_FedTestProject.yml
@@ -8,6 +8,7 @@ packages:
   gitUsername: Karthik-V-IBM-10
   gitBranch: main
 - name: WmJDBCAdapter
+  version: 10.3.0.0.34
   wpmServer: https://packages.webmethods.io
   wpmRegistry: licensed
 services:
@@ -19,54 +20,82 @@ services:
     version: 10.3.0.0.34
     wpmServer: https://packages.webmethods.io
     wpmRegistry: licensed
+- serviceName: project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections:MYSQL
+  packages:
+  - name: Kvv_1902_FedTestProject
+    version: "1.0"
+  - name: WmJDBCAdapter
+    version: 10.3.0.0.34
+    wpmServer: https://packages.webmethods.io
+    wpmRegistry: licensed
+- serviceName: project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.operations.actions:test
+  packages:
+  - name: Kvv_1902_FedTestProject
+    version: "1.0"
+  - name: WmJDBCAdapter
+    version: 10.3.0.0.34
+    wpmServer: https://packages.webmethods.io
+    wpmRegistry: licensed
+- serviceName: project.kvv_1902_fedtest.integrations:db
+  packages:
+  - name: Kvv_1902_FedTestProject
+    version: "1.0"
+  - name: WmJDBCAdapter
+    version: 10.3.0.0.34
+    wpmServer: https://packages.webmethods.io
+    wpmRegistry: licensed
 configurationVariables:
   jdbc.Embedded-Database-Pool.waitingThread: "0"
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionManagerSettings.maximumPoolSize
   : "10"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionManagerSettings.startupRetryCount
+  : "0"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionSettings.databaseName
+  : MYSQL_DATABASE
   jdbcfunc.Xref.failFastMode: true
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionManagerSettings.startupBackoffSecs
   : "10"
-  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.user
-  : sa
-  jdbcfunc.ISDashboardStats.connPoolAlias: Embedded-Database-Pool
   jdbcfunc.Xref.connPoolAlias: Embedded-Database-Pool
   jdbc.Embedded-Database-Pool.userid: APP
   jdbcfunc.ISInternal.connPoolAlias: Embedded-Database-Pool
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionSettings.dbType
+  : MySQL
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionManagerSettings.poolIncrementSize
+  : "1"
   jdbc.Embedded-Database-Pool.password: "{AES}Zcw2EXTJgNDVmVzJO2Y3Bw=="
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionEnabled
   : "false"
-  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionManagerSettings.poolIncrementSize
-  : "1"
-  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.serverName
-  : 9.60.195.99
-  jdbc.Embedded-Database-Pool.snoopenabled: "false"
   jdbc.Embedded-Database-Pool.snoopparms: ddtdbg.ProtocolTraceEnable=true;ddtdbg.ProtocolTraceMaxline=16;ddtdbg.ProtocolTraceLocation=logs/snoop/Embedded-Database-Pool.log;ddtdbg.ProtocolTraceShowTime=true
-  jdbcfunc.ISInternal.failFastMode: true
   jdbc.Embedded-Database-Pool.maxConns: "10"
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionManagerSettings.minimumPoolSize
   : "1"
-  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.keyStore
-  : ""
   jdbc.Embedded-Database-Pool.expireTime: "60000"
   jdbc.Embedded-Database-Pool.useSSL: "false"
-  jdbc.Embedded-Database-Pool.minConns: "0"
   jdbc.Embedded-Database-Pool.driverAlias: Embedded Database Driver
-  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionManagerSettings.startupRetryCount
-  : "0"
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.trustStore
   : ""
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionManagerSettings.expireTimeout
+  : "1000"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionManagerSettings.heartBeatInterval
+  : "0"
   jdbc.Embedded-Database-Pool.spyparms: SpyAttributes=(log=(file)logs/spy/Embedded-Database-Pool.log;logTName=yes;timestamp=yes)
   jdbc.Embedded-Database-Pool.dbURL: jdbc:derby:embedded;create=true
-  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.otherProperties
-  : loginTimeout=60;driverType=thin;
-  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionManagerSettings.heartBeatInterval
-  : "0"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionSettings.trustStore
+  : ""
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionManagerSettings.minimumPoolSize
+  : "1"
   jdbcfunc.ISDashboardStats.failFastMode: false
-  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionManagerSettings.poolable
-  : "false"
-  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionManagerSettings.blockingTimeout
-  : "1000"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionManagerSettings.startupBackoffSecs
+  : "10"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionSettings.password
+  : "{AES}D6/2AGfsSWDOcWCLrORnEQ=="
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionSettings.keyStore
+  : ""
   jdbc.Embedded-Database-Pool.spyenabled: "false"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionSettings.user
+  : siqatest
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionManagerSettings.blockingTimeout
+  : "1000"
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.dbType
   : MSSQL
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.password
@@ -78,11 +107,53 @@ configurationVariables:
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.datasourceClass
   : com.wm.dd.jdbcx.sqlserver.SQLServerDataSource
   jdbc.Embedded-Database-Pool.poolThreshold: "0"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionSettings.driverType
+  : mysql
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionSettings.transactionType
+  : NO_TRANSACTION
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.networkProtocol
   : tcp
-  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.transactionType
-  : NO_TRANSACTION
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionManagerSettings.maximumPoolSize
+  : "10"
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionManagerSettings.expireTimeout
   : "1000"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionManagerSettings.poolable
+  : "false"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionSettings.serverName
+  : 9.46.196.248
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.user
+  : sa
+  jdbcfunc.ISDashboardStats.connPoolAlias: Embedded-Database-Pool
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionManagerSettings.poolIncrementSize
+  : "1"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.serverName
+  : 9.60.195.99
+  jdbc.Embedded-Database-Pool.snoopenabled: "false"
+  jdbcfunc.ISInternal.failFastMode: true
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.keyStore
+  : ""
+  jdbc.Embedded-Database-Pool.minConns: "0"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionManagerSettings.startupRetryCount
+  : "0"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.otherProperties
+  : loginTimeout=60;driverType=thin;
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionEnabled
+  : "false"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionManagerSettings.heartBeatInterval
+  : "0"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionSettings.portNumber
+  : "3306"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionManagerSettings.poolable
+  : "false"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionManagerSettings.blockingTimeout
+  : "1000"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionSettings.otherProperties
+  : loginTimeout=60;driverType=thin;
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionSettings.datasourceClass
+  : com.mysql.cj.jdbc.MysqlDataSource
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.transactionType
+  : NO_TRANSACTION
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.driverType
   : Progress® DataDirect®
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionSettings.networkProtocol
+  : tcp
