--- a/config/scaffolding/Kvv_1902_FedTestProject.yml
+++ b/config/scaffolding/Kvv_1902_FedTestProject.yml
@@ -12,12 +12,23 @@ packages:
   wpmServer: https://packages.webmethods.io
   wpmRegistry: licensed
 - name: SIQAJDBCAdapterTests
+  version: "1.0"
   gitServerName: kvv
   gitUrl: https://github.com/manoj-jannu-IBM
   gitUsername: Karthik-V-IBM-10
   gitBranch: main
 services:
 - serviceName: project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections:MSSQL
+  packages:
+  - name: Kvv_1902_FedTestProject
+    version: "1.0"
+  - name: SIQAJDBCAdapterTests
+    version: "1.0"
+  - name: WmJDBCAdapter
+    version: 10.3.0.0.34
+    wpmServer: https://packages.webmethods.io
+    wpmRegistry: licensed
+- serviceName: project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections:MSSQL2
   packages:
   - name: Kvv_1902_FedTestProject
     version: "1.0"
@@ -81,13 +92,21 @@ configurationVariables:
   jdbcfunc.Xref.connPoolAlias: Embedded-Database-Pool
   jdbc.Embedded-Database-Pool.userid: APP
   jdbcfunc.ISInternal.connPoolAlias: Embedded-Database-Pool
-  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionSettings.dbType
-  : MySQL
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL2.connectionSettings.networkProtocol
+  : tcp
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionManagerSettings.poolIncrementSize
   : "1"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionSettings.dbType
+  : MySQL
   jdbc.Embedded-Database-Pool.password: "{AES}Zcw2EXTJgNDVmVzJO2Y3Bw=="
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionEnabled
   : "false"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL2.connectionSettings.trustStore
+  : ""
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL2.connectionEnabled
+  : "false"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL2.connectionManagerSettings.minimumPoolSize
+  : "1"
   jdbc.Embedded-Database-Pool.snoopparms: ddtdbg.ProtocolTraceEnable=true;ddtdbg.ProtocolTraceMaxline=16;ddtdbg.ProtocolTraceLocation=logs/snoop/Embedded-Database-Pool.log;ddtdbg.ProtocolTraceShowTime=true
   jdbc.Embedded-Database-Pool.maxConns: "10"
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionManagerSettings.minimumPoolSize
@@ -103,11 +122,15 @@ configurationVariables:
   : "0"
   jdbc.Embedded-Database-Pool.spyparms: SpyAttributes=(log=(file)logs/spy/Embedded-Database-Pool.log;logTName=yes;timestamp=yes)
   jdbc.Embedded-Database-Pool.dbURL: jdbc:derby:embedded;create=true
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL2.connectionSettings.otherProperties
+  : loginTimeout=60;driverType=thin;
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionSettings.trustStore
   : ""
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionManagerSettings.minimumPoolSize
   : "1"
   jdbcfunc.ISDashboardStats.failFastMode: false
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL2.connectionManagerSettings.heartBeatInterval
+  : "0"
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionManagerSettings.startupBackoffSecs
   : "10"
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionSettings.password
@@ -117,17 +140,25 @@ configurationVariables:
   jdbc.Embedded-Database-Pool.spyenabled: "false"
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionSettings.user
   : siqatest
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL2.connectionSettings.password
+  : "{AES}X4QCAWgjWkTdMQvFA5XaqGmK1wuN3U1rA1B0VhuZoUw="
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionManagerSettings.blockingTimeout
   : "1000"
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.dbType
   : MSSQL
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.password
   : "{AES}X4QCAWgjWkTdMQvFA5XaqGmK1wuN3U1rA1B0VhuZoUw="
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL2.connectionSettings.user
+  : sa
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.portNumber
   : "1433"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL2.connectionManagerSettings.maximumPoolSize
+  : "10"
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.databaseName
   : SIQACloud
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.datasourceClass
+  : com.wm.dd.jdbcx.sqlserver.SQLServerDataSource
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL2.connectionSettings.datasourceClass
   : com.wm.dd.jdbcx.sqlserver.SQLServerDataSource
   jdbc.Embedded-Database-Pool.poolThreshold: "0"
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionSettings.driverType
@@ -140,23 +171,39 @@ configurationVariables:
   : "10"
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionManagerSettings.expireTimeout
   : "1000"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL2.connectionManagerSettings.expireTimeout
+  : "1000"
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionManagerSettings.poolable
   : "false"
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionSettings.serverName
   : 9.46.196.248
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL2.connectionManagerSettings.startupBackoffSecs
+  : "10"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL2.connectionSettings.portNumber
+  : "1433"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL2.connectionSettings.driverType
+  : Progress® DataDirect®
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.user
   : sa
   jdbcfunc.ISDashboardStats.connPoolAlias: Embedded-Database-Pool
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL2.connectionManagerSettings.poolIncrementSize
+  : "1"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL2.connectionSettings.databaseName
+  : SIQACloud
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionManagerSettings.poolIncrementSize
   : "1"
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.serverName
   : 9.60.195.99
   jdbc.Embedded-Database-Pool.snoopenabled: "false"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL2.connectionManagerSettings.blockingTimeout
+  : "1000"
   jdbcfunc.ISInternal.failFastMode: true
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.keyStore
   : ""
   jdbc.Embedded-Database-Pool.minConns: "0"
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionManagerSettings.startupRetryCount
+  : "0"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL2.connectionManagerSettings.startupRetryCount
   : "0"
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.otherProperties
   : loginTimeout=60;driverType=thin;
@@ -170,10 +217,20 @@ configurationVariables:
   : "false"
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionManagerSettings.blockingTimeout
   : "1000"
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL2.connectionSettings.serverName
+  : 9.60.195.99
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL2.connectionManagerSettings.poolable
+  : "false"
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionSettings.otherProperties
   : loginTimeout=60;driverType=thin;
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL2.connectionSettings.keyStore
+  : ""
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MYSQL.connectionSettings.datasourceClass
   : com.mysql.cj.jdbc.MysqlDataSource
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL2.connectionSettings.transactionType
+  : NO_TRANSACTION
+  ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL2.connectionSettings.dbType
+  : MSSQL
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.transactionType
   : NO_TRANSACTION
   ? artConnection.Kvv_1902_FedTestProject.project.kvv_1902_fedtest.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.MSSQL.connectionSettings.driverType
